--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     },
     "dependencies": {
         "@auth/prisma-adapter": "^2.9.0",
+        "@hookform/resolvers": "^5.0.1",
         "@prisma/client": "^6.7.0",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-slot": "^1.2.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.507.0",
         "next": "15.3.1",
         "next-auth": "5.0.0-beta.27",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.56.2",
+        "react-icons": "^5.5.0",
+        "tailwind-merge": "^3.2.0",
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
@@ -23,6 +33,7 @@
         "@types/react-dom": "^19",
         "prisma": "^6.7.0",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.2.9",
         "typescript": "^5"
     },
     "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
